--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1200">
-    <link href="./output.css" rel="stylesheet">
+    <link href="./src/output.css" rel="stylesheet">
 </head>
 
 <body class="bg-bg-color">
 
-    <img src="../Group 1.png" alt="logos" class="py-4 mx-auto">
+    <img src="./Group 1.png" alt="logos" class="py-4 mx-auto">
 
     <section class="flex items-center justify-center p-16">
         <div class="flex flex-col w-1/2 gap-8">
@@ -19,7 +19,7 @@
                 Pengelolaan Limbah Plastik</h2>
         </div>
         <div>
-            <img src="../_b34cda0b-6b9e-4074-abbe-b7e896461764 1.png" alt="hero-images">
+            <img src="./_b34cda0b-6b9e-4074-abbe-b7e896461764 1.png" alt="hero-images">
         </div>
     </section>
 
