--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
 
     <section class="px-16 py-8">
         <div class="flex flex-col p-8 bg-card-color">
-            <p class="p-8 font-bold text-center text-font-color">PlastEco Solutions akan menawarkan layanan pengumpulan,
-                pemrosesan, dan
-                daur
-                ulang limbah
-                plastik dari berbagai jenis sumber,
-                termasuk perusahaan, pabrik, dan komunitas lokal. Selain itu, kami akan memproduksi dan menjual
-                produk-produk daur ulang
-                plastik yang inovatif dan ramah lingkungan kepada konsumen, seperti furnitur, wadah penyimpanan, dan
-                aksesori rumah tangga.</p>
+            <p class="p-8 font-bold text-center text-font-color">Perusahaan Anda memproduksi limbah plastik dalam jumlah
+                besar? Komunitas lokal atau individu yang peduli terhadap lingkungan? PlastEco Solutions hadir untuk
+                Anda! Temukan solusi ramah lingkungan untuk limbah plastik Anda. Dengan teknologi canggih kami, Anda
+                dapat mengurangi dampak lingkungan negatif dan menciptakan masa depan yang lebih bersih. Ayo bergabung
+                dengan gerakan ramah lingkungan bersama PlastEco Solutions sekarang!</p>
             <a href="#" class="block mx-auto w-80"><button
                     class="px-12 py-4 text-[#fff] font-bold rounded-full bg-button-color justify-center w-80 mx-auto">
                     Kelola Limbah Sekarang !
