Melengkapi Landing Page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <section class="px-16 py-8">
-        <div class="flex flex-col p-8 bg-card-color">
+        <div class="flex flex-col p-8 rounded-xl bg-card-color">
             <p class="p-8 font-bold text-center text-font-color">Perusahaan Anda memproduksi limbah plastik dalam jumlah
                 besar? Komunitas lokal atau individu yang peduli terhadap lingkungan? PlastEco Solutions hadir untuk
                 Anda! Temukan solusi ramah lingkungan untuk limbah plastik Anda. Dengan teknologi canggih kami, Anda
@@ -35,6 +35,142 @@
                     Kelola Limbah Sekarang !
                 </button>
             </a>
+        </div>
+    </section>
+
+    <section class="px-16 py-8">
+        <div class="flex justify-between">
+            <div class="flex flex-col justify-center rounded-2xl bg-card-color w-96">
+                <img src="./image 2.png" alt="produk" class="py-6 mx-auto">
+                <h1 class="text-xl font-bold text-center text-font-color">Payung Kreatif</h1>
+                <p class="px-6 mt-2 text-center text-font-color">Payung kreatif dari barang bekas adalah payung yang dibuat dengan memanfaatkan material daur ulang.</p>
+                <button class="px-8 py-2 flex justify-center w-32 mx-auto mb-6 text-[#fff] font-bold rounded-full bg-button-color mt-4">Beli</button>
+            </div>
+            <div class="flex flex-col justify-center rounded-2xl bg-card-color w-96">
+                <img src="./image 3.png" alt="produk" class="py-6 mx-auto">
+                <h1 class="text-xl font-bold text-center text-font-color">Tas Belanja Kreatif</h1>
+                <p class="px-6 mt-2 text-center text-font-color">Tas Belanja Kreatif dari barang bekas adalah tas belanja yang dibuat dengan memanfaatkan bahan daur ulang.</p>
+                <button class="px-8 py-2 flex justify-center w-32 mx-auto mb-6 text-[#fff] font-bold rounded-full bg-button-color mt-4">Beli</button>
+            </div>
+            <div class="flex flex-col justify-center rounded-2xl bg-card-color w-96">
+                <img src="./image 4.png" alt="produk" class="py-6 mx-auto">
+                <h1 class="text-xl font-bold text-center text-font-color">Aneka Tas Kreatif</h1>
+                <p class="px-6 mt-2 text-center text-font-color">Aneka Tas Kreatif dari barang bekas adalah tas yang dibuat dengan memanfaatkan bahan daur ulang.</p>
+                <button class="px-8 py-2 flex justify-center w-32 mx-auto mb-6 text-[#fff] font-bold rounded-full bg-button-color mt-4">Beli</button>
+            </div>
+        </div>
+        <a href="#">
+        <h2 class="flex justify-end w-full mt-4 text-2xl font-bold text-font-color">-- See All --</h2>
+        </a>
+    </section>
+
+    <section class="px-16 py-8">
+        <h1 class="text-5xl font-bold text-center text-font-color">MENGAPA PLASTECO SOLUTIONS?</h1>
+        <div class="flex flex-col gap-16 mt-20">
+            <div class="flex items-center justify-center w-10/12 gap-20 mx-auto">
+                <img src="./Group 4.png" alt="keunggulan">
+                <p class="text-lg font-semibold text-justify text-font-color">Dengan PlastEco Solutions, Anda dapat mengurangi dampak negatif limbah 
+                    plastik terhadap lingkungan dengan mengadopsi pendekatan yang bertanggung 
+                    jawab dan berkelanjutan.</p>
+            </div>
+            <div class="flex items-center justify-center w-10/12 gap-20 mx-auto">
+                <img src="./Group 5.png" alt="keunggulan">
+                <p class="text-lg font-semibold text-justify text-font-color">Manfaatkan solusi kami untuk mengelola limbah plastik secara efisien dan
+                    efektif, membantu mengurangi pencemaran lingkungan sambil menghasilkan 
+                    produk-produk ramah lingkungan.</p>
+            </div>
+            <div class="flex items-center justify-center w-10/12 gap-20 mx-auto">
+                <img src="./Group 6.png" alt="keunggulan">
+                <p class="text-lg font-semibold text-justify text-font-color">Bergabunglah dengan PlastEco Solutions dan kontribusikan pada upaya global
+                    dalam menjaga keberlanjutan planet ini, sambil mendapatkan akses ke
+                    produk-produk berkualitas tinggi dari limbah plastik yang didaur ulang.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="px-16 py-8">
+        <h1 class="text-5xl font-bold text-center text-font-color">MASALAH & SOLUSI</h1>
+        <div class="flex flex-col p-4 mt-12 rounded-xl bg-card-color">
+            <p class="p-8 font-bold text-center text-font-color">Tingginya tingkat pencemaran lingkungan oleh limbah plastik merupakan masalah yang mendesak yang dihadapi oleh 
+                banyak komunitas di seluruh dunia. PlastEco Solutions menyadari bahwa tanpa tindakan yang tepat, limbah plastik akan terus mengancam keberlanjutan lingkungan dan kesehatan manusia. Oleh karena itu, kami menawarkan solusi lengkap untuk pengelolaan limbah plastik dengan pendekatan yang holistik dan berkelanjutan. Dengan layanan pengumpulan, pemrosesan, dan daur ulang yang efisien, kami membantu mengurangi jumlah limbah plastik yang berakhir di lautan dan lingkungan sekitarnya.  Melalui inovasi produk-produk ramah lingkungan yang dibuat dari limbah plastik yang didaur ulang, kami tidak hanya memecahkan masalah limbah plastik, tetapi juga menciptakan nilai tambah bagi konsumen yang peduli dengan lingkungan. Bersama-sama, mari kita wujudkan dunia yang lebih bersih dan berkelanjutan dengan PlastEco Solutions.</p>
+        </div>
+    </section>
+
+    <section class="px-16 py-8">
+        <h1 class="text-5xl font-bold text-center text-font-color">PENAWARAN KHUSUS</h1>
+        <div class="flex flex-col p-8 mt-12 rounded-xl bg-card-color">
+            <p class="p-8 font-bold text-center text-font-color">Dapatkan penawaran eksklusif dari PlastEco Solutions! Kami menawarkan program kemitraan yang menguntungkan
+                bagi perusahaan, pabrik, dan komunitas lokal yang ingin berkontribusi pada pengelolaan limbah plastik yang berkelanjutan.
+                Bergabunglah dengan kami sekarang untuk mendapatkan akses ke layanan pengumpulan, 
+                pemrosesan, dan daur ulang limbah plastik dengan harga istimewa.</p>
+            <a href="#" class="block mx-auto w-80"><button
+                    class="px-12 py-4 text-[#fff] font-bold rounded-full bg-button-color justify-center w-80 mx-auto">
+                    Dapatkan Penawaran!
+                </button>
+            </a>
+        </div>
+    </section>
+
+    <section class="px-16 py-8">
+        <h1 class="text-5xl font-bold text-center text-font-color">FAQ</h1>
+        <div class="px-6 py-4 mt-12 bg-card-color rounded-xl">
+            <div class="flex items-center justify-between h-16">
+                <h1 class="text-3xl font-bold text-font-color">Apa jenis plastik yang dapat didaur ulang oleh PlastEco Solutions?</h1>
+                <img src="./🦆 icon _chevron bottom_.png" alt="arrow" id="arrow1" style="cursor: pointer;">
+            </div>
+            <p id="content1" class="hidden text-xl font-semibold text-font-color">PlastEco Solutions dapat mendaur ulang berbagai jenis plastik, termasuk polyethylene terephthalate (PET), high-density polyethylene (HDPE), low-density polyethylene (LDPE), polypropylene (PP), dan polystyrene (PS). Melalui teknologi canggih dan proses yang ramah lingkungan, PlastEco Solutions mengubah sampah plastik ini menjadi produk bernilai tinggi seperti bahan bangunan, produk konsumen, dan komponen industri. Dengan fokus pada keberlanjutan, perusahaan ini berkomitmen untuk mengurangi limbah plastik dan dampak negatifnya terhadap lingkungan, sambil mendukung ekonomi sirkular melalui inovasi daur ulang.</p>
+        </div>
+        <div class="px-6 py-4 mt-12 bg-card-color rounded-xl">
+            <div class="flex items-center justify-between h-16">
+                <h1 class="text-3xl font-bold text-font-color">Apakah produk yang dihasilkan oleh PlastEco Solutions aman digunakan?</h1>
+                <img src="./🦆 icon _chevron bottom_.png" alt="arrow" id="arrow2" style="cursor: pointer;">
+            </div>
+            <p id="content2" class="hidden text-xl font-semibold text-font-color">Produk yang dihasilkan oleh PlastEco Solutions telah melalui uji kualitas dan keamanan yang ketat untuk memastikan aman digunakan oleh konsumen. Perusahaan ini menggunakan bahan baku plastik daur ulang yang diproses dengan teknologi tinggi untuk menghilangkan kontaminan dan memastikan standar keselamatan yang tinggi.</p>
+        </div>
+        <div class="px-6 py-4 mt-12 bg-card-color rounded-xl">
+            <div class="flex items-center justify-between h-16">
+                <h1 class="text-3xl font-bold text-font-color">Bagaimana PlastEco Solutions memastikan proses daur ulangnya ramah lingkungan?</h1>
+                <img src="./🦆 icon _chevron bottom_.png" alt="arrow" id="arrow3" style="cursor: pointer;">
+            </div>
+            <p id="content3" class="hidden text-xl font-semibold text-font-color">PlastEco Solutions menggunakan teknologi daur ulang yang ramah lingkungan dengan meminimalkan penggunaan energi dan air, serta mengurangi emisi karbon. Selain itu, perusahaan ini juga berkomitmen untuk menggunakan bahan kimia yang tidak berbahaya dalam proses daur ulang dan menerapkan praktik pengelolaan limbah yang bertanggung jawab.</p>
+        </div>
+        <a href="#">
+            <h2 class="flex justify-end w-full mt-4 text-2xl font-bold text-font-color">-- See All --</h2>
+            </a>
+    </section>
+
+    <section class="px-16 py-8">
+            <h1 class="text-5xl font-bold text-center text-font-color">TESTIMONI</h1>  
+        <div class="flex flex-wrap justify-between mt-12">
+            <div class="w-full p-6 mx-2 mb-6 text-center rounded-lg shadow-lg bg-card-color sm:w-1/2 lg:w-1/4">
+                <img src="./🦆 icon _User Circle_.png" alt="Maria" class="mx-auto mb-4 rounded-full">
+                <h2 class="mb-2 text-xl font-semibold text-font-color">Maria</h2>
+                <p class="text-font-color">"Saya sangat terkesan dengan PlastEco Solutions! Mereka membantu bisnis saya mengadopsi kemasan ramah lingkungan dengan menggunakan plastik daur ulang. Produk-produk mereka tidak hanya berkualitas tinggi, tetapi juga membantu kami mengurangi dampak negatif terhadap lingkungan. Terima kasih, PlastEco!"</p>
+            </div>
+            <div class="w-full p-6 mx-2 mb-6 text-center rounded-lg shadow-lg bg-card-color sm:w-1/2 lg:w-1/4">
+                <img src="./🦆 icon _User Circle_.png" alt="Ahmad" class="mx-auto mb-4 rounded-full">
+                <h2 class="mb-2 text-xl font-semibold text-font-color">Ahmad</h2>
+                <p class="text-font-color">"PlastEco Solutions adalah mitra daur ulang plastik terbaik yang pernah saya temui! Dengan bantuan mereka, kami berhasil mengurangi limbah plastik di restoran kami dan beralih ke produk-produk ramah lingkungan. Layanan pelanggan mereka sangat baik, dan hasilnya sangat memuaskan."</p>
+            </div>
+            <div class="w-full p-6 mx-2 mb-6 text-center rounded-lg shadow-lg bg-card-color sm:w-1/2 lg:w-1/4">
+                <img src="./🦆 icon _User Circle_.png" alt="Lisa" class="mx-auto mb-4 rounded-full">
+                <h2 class="mb-2 text-xl font-semibold text-font-color">Lisa</h2>
+                <p class="text-font-color">"Saya sangat senang menemukan PlastEco Solutions! Mereka tidak hanya menyediakan produk-produk ramah lingkungan yang berkualitas tinggi, tetapi juga membantu saya berkontribusi pada upaya menjaga keberlanjutan planet ini. Saya sangat merekomendasikan PlastEco kepada siapa pun yang peduli dengan lingkungan."</p>
+            </div>
+        </div>
+        <a href="#">
+            <h2 class="flex justify-end w-full text-2xl font-bold text-font-color">-- See All --</h2>
+            </a>
+    </section>
+
+    <section class="px-16 py-8 mb-16">
+        <h1 class="text-5xl font-bold text-center text-font-color">SUPPORTED BY</h1>
+        <div class="flex justify-center mt-12 space-x-8">
+            <img src="./Group 7.png" alt="Facebook">
+            <img src="./Group 8.png" alt="Twitter">
+            <img src="./Group 9.png" alt="Apple">
+            <img src="./Group 10.png" alt="Instagram">
+            <img src="./Group 11.png" alt="OpenAI">
         </div>
     </section>
 
@@ -51,13 +187,13 @@
                 </thead>
                 <tbody>
                     <tr class="bg-white">
-                        <td class="px-4 py-2 font-semibold border text-font-color">Rangga Rozandi</td>
-                        <td class="px-4 py-2 font-semibold border text-font-color">21.11.3908</td>
+                        <td class="px-4 py-2 font-semibold border text-font-color">Joko Setyanto</td>
+                        <td class="px-4 py-2 font-semibold border text-font-color">21.11.3937</td>
                         <td class="px-4 py-2 font-semibold border text-font-color">21 IF 02</td>
                     </tr>
                     <tr class="bg-white">
-                        <td class="px-4 py-2 font-semibold border text-font-color">Joko Setyanto</td>
-                        <td class="px-4 py-2 font-semibold border text-font-color">21.11.3937</td>
+                        <td class="px-4 py-2 font-semibold border text-font-color">Rangga Rozandi</td>
+                        <td class="px-4 py-2 font-semibold border text-font-color">21.11.3908</td>
                         <td class="px-4 py-2 font-semibold border text-font-color">21 IF 02</td>
                     </tr>
                 </tbody>
@@ -65,6 +201,23 @@
         </div>
     </section>
 
+
+    <script>
+        document.getElementById('arrow1').addEventListener('click', function() {
+            var content = document.getElementById('content1');
+            content.classList.toggle('hidden');
+        });
+
+        document.getElementById('arrow2').addEventListener('click', function() {
+            var content = document.getElementById('content2');
+            content.classList.toggle('hidden');
+        });
+
+        document.getElementById('arrow3').addEventListener('click', function() {
+            var content = document.getElementById('content3');
+            content.classList.toggle('hidden');
+        });
+    </script>
 
 </body>
 
