Menambahkan margin pada FAQ

--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
                 <h1 class="text-3xl font-bold text-font-color">Apa jenis plastik yang dapat didaur ulang oleh PlastEco Solutions?</h1>
                 <img src="./🦆 icon _chevron bottom_.png" alt="arrow" id="arrow1" style="cursor: pointer;">
             </div>
-            <p id="content1" class="hidden text-xl font-semibold text-font-color">PlastEco Solutions dapat mendaur ulang berbagai jenis plastik, termasuk polyethylene terephthalate (PET), high-density polyethylene (HDPE), low-density polyethylene (LDPE), polypropylene (PP), dan polystyrene (PS). Melalui teknologi canggih dan proses yang ramah lingkungan, PlastEco Solutions mengubah sampah plastik ini menjadi produk bernilai tinggi seperti bahan bangunan, produk konsumen, dan komponen industri. Dengan fokus pada keberlanjutan, perusahaan ini berkomitmen untuk mengurangi limbah plastik dan dampak negatifnya terhadap lingkungan, sambil mendukung ekonomi sirkular melalui inovasi daur ulang.</p>
+            <p id="content1" class="hidden mt-4 text-xl font-semibold text-font-color">PlastEco Solutions dapat mendaur ulang berbagai jenis plastik, termasuk polyethylene terephthalate (PET), high-density polyethylene (HDPE), low-density polyethylene (LDPE), polypropylene (PP), dan polystyrene (PS). Melalui teknologi canggih dan proses yang ramah lingkungan, PlastEco Solutions mengubah sampah plastik ini menjadi produk bernilai tinggi seperti bahan bangunan, produk konsumen, dan komponen industri. Dengan fokus pada keberlanjutan, perusahaan ini berkomitmen untuk mengurangi limbah plastik dan dampak negatifnya terhadap lingkungan, sambil mendukung ekonomi sirkular melalui inovasi daur ulang.</p>
         </div>
         <div class="px-6 py-4 mt-12 bg-card-color rounded-xl">
             <div class="flex items-center justify-between h-16">
                 <h1 class="text-3xl font-bold text-font-color">Apakah produk yang dihasilkan oleh PlastEco Solutions aman digunakan?</h1>
                 <img src="./🦆 icon _chevron bottom_.png" alt="arrow" id="arrow2" style="cursor: pointer;">
             </div>
-            <p id="content2" class="hidden text-xl font-semibold text-font-color">Produk yang dihasilkan oleh PlastEco Solutions telah melalui uji kualitas dan keamanan yang ketat untuk memastikan aman digunakan oleh konsumen. Perusahaan ini menggunakan bahan baku plastik daur ulang yang diproses dengan teknologi tinggi untuk menghilangkan kontaminan dan memastikan standar keselamatan yang tinggi.</p>
+            <p id="content2" class="hidden mt-4 text-xl font-semibold text-font-color">Produk yang dihasilkan oleh PlastEco Solutions telah melalui uji kualitas dan keamanan yang ketat untuk memastikan aman digunakan oleh konsumen. Perusahaan ini menggunakan bahan baku plastik daur ulang yang diproses dengan teknologi tinggi untuk menghilangkan kontaminan dan memastikan standar keselamatan yang tinggi.</p>
         </div>
         <div class="px-6 py-4 mt-12 bg-card-color rounded-xl">
             <div class="flex items-center justify-between h-16">
                 <h1 class="text-3xl font-bold text-font-color">Bagaimana PlastEco Solutions memastikan proses daur ulangnya ramah lingkungan?</h1>
                 <img src="./🦆 icon _chevron bottom_.png" alt="arrow" id="arrow3" style="cursor: pointer;">
             </div>
-            <p id="content3" class="hidden text-xl font-semibold text-font-color">PlastEco Solutions menggunakan teknologi daur ulang yang ramah lingkungan dengan meminimalkan penggunaan energi dan air, serta mengurangi emisi karbon. Selain itu, perusahaan ini juga berkomitmen untuk menggunakan bahan kimia yang tidak berbahaya dalam proses daur ulang dan menerapkan praktik pengelolaan limbah yang bertanggung jawab.</p>
+            <p id="content3" class="hidden mt-4 text-xl font-semibold text-font-color">PlastEco Solutions menggunakan teknologi daur ulang yang ramah lingkungan dengan meminimalkan penggunaan energi dan air, serta mengurangi emisi karbon. Selain itu, perusahaan ini juga berkomitmen untuk menggunakan bahan kimia yang tidak berbahaya dalam proses daur ulang dan menerapkan praktik pengelolaan limbah yang bertanggung jawab.</p>
         </div>
         <a href="#">
             <h2 class="flex justify-end w-full mt-4 text-2xl font-bold text-font-color">-- See All --</h2>
