--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
         </div>
     </section>
 
+    <div class="flex justify-end px-16">
+    <button id="backToTop" class="w-64 p-8 mb-12 font-bold rounded-full shadow-lg bg-card-color hover:bg-button-color">
+        <img src="./Vector.png" alt="top" class="w-4">
+    </button>
+    </div>
+
     <section class="w-full">
         <h1 class="text-4xl font-bold text-center text-font-color">ANGGOTA KELOMPOK</h1>
         <div class="p-12 mx-auto">
@@ -201,7 +207,6 @@
         </div>
     </section>
 
-
     <script>
         document.getElementById('arrow1').addEventListener('click', function() {
             var content = document.getElementById('content1');
@@ -216,6 +221,14 @@
         document.getElementById('arrow3').addEventListener('click', function() {
             var content = document.getElementById('content3');
             content.classList.toggle('hidden');
+        });
+
+        // Back to top button functionality
+        document.getElementById('backToTop').addEventListener('click', function () {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
         });
     </script>
 
